--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" type="image/png" href="./logo.png"/>
+    <link rel="icon" type="image/png" href="./logi.png"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Radar</title>
@@ -98,7 +98,7 @@ e.preventDefault();
 <body>
     <h1 id="demo">Radar Bot</h1>
     <p>Radar is best multifunctional discord bot with many useful features</p>
-    <img src="./logo.png" class="center">
+    <img src="./logi.png" class="center">
     <div id="wrapper">
         <button class="glow-on-hover"><a href="https://dsc.gg/radardc">Server</a></button>
         <button class="glow-on-hover"><a href="https://dsc.gg/radar">Invite</a></button>
