--- a/index.html
+++ b/index.html
@@ -3,22 +3,15 @@
 <html lang="en">
 <head>
 
-<meta name="description" content="Radar is best multifunctional discord bot with many useful features!" />
-<meta name="author" content="Aight/Radar Team" />
-<meta itemprop="name" content="Radar Bot" />
-<meta itemprop="description" content="Radar is best multifunctional discord bot with many useful features!" />
-<meta itemprop="image" content="./logi.png" />
+
 <meta name="theme-color" content="#03d7fc" />
 <meta property="og:url" content="http://radar-bot.xyz" />
 <meta property="og:type" content="website" />
-<meta property="og:site_name" content="Radar Bot" />
+
 <meta property="og:title" content="Radar Bot" />
 <meta property="og:description" content="Radar is best multifunctional discord bot with many useful features!" />
-<meta property="og:image" content="./logi.png" />
-<meta name="twitter:card" content="summary" />
-<meta name="twitter:title" content="Radar Bot" />
-<meta name="twitter:description" content="Radar is best multifunctional discord bot with many useful features!" />
-<meta name="twitter:image" content="./logi.png" />
+<meta property="og:image" content="https://radar-bot.github.io/Radar/logi.png" />
+
     
     
     <link rel="icon" type="image/png" href="./logi.png"/>
