--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@ e.preventDefault();
     <p>Radar is best multifunctional discord bot with many useful features</p>
     <img src="./logi.png" class="center">
     <div id="wrapper">
-        <button class="glow-on-hover"><a href="https://dsc.gg/radardc">Server</a></button>
-        <button class="glow-on-hover"><a href="https://dsc.gg/radar">Invite</a></button>
+        <button class="glow-on-hover"><a href="https://discord.com/invite/SHpVQNmgHt">Server</a></button>
+        <button class="glow-on-hover"><a href="https://discord.com/oauth2/authorize?client_id=787438051479388170&permissions=8&scope=bot%20applications.commands">Invite</a></button>
    </div>
 </body>
 </html>
