Update the metadata image

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     />
     <meta
       property="og:image"
-      content="https://radar-bot.github.io/Radar/logi.png"
+      content="https://radar-bot.github.io/Radar/img/logi.png"
     />
 
     <link rel="icon" type="image/png" href="./img/logi.png" />
