--- a/apply.html
+++ b/apply.html
@@ -34,8 +34,8 @@
   </head>
   <body>
     <h1 id="demo">Staff Apply</h1>
-    <p>Website for staf apply of Radar Bot!</p>
-    <img src="./img/apply.png" class="center" />
+    <p>Website where you can apply for Radar staff!</p>
+    <img src="./img/staff.png" class="center" />
     <div id="wrapper">
       <button class="glow-on-hover">
           <a href="https://discord.com/invite/SHpVQNmgHt">Server</a>                                
