--- a/index.html
+++ b/index.html
@@ -47,5 +47,6 @@
         >
       </button>
     </div>
+    <script src="https://betteruptime.com/widgets/announcement.js" data-id="124915" async="async" type="text/javascript"></script>
   </body>
 </html>
