--- a/apply.html
+++ b/apply.html
@@ -35,6 +35,8 @@
   <body>
     <h1 id="demo">Staff Apply</h1>
     <p>Website where you can apply for Radar staff!</p>
+    <p>Requirements:</p>
+    <p>Something goes here lol</p>
     <img src="./img/staff.png" class="center" />
     <div id="wrapper">
       <button class="glow-on-hover">
@@ -42,8 +44,8 @@
       </button>
       <button class="glow-on-hover">
         <a
-          href="https://radar-bot.xyz"
-          >Home</a
+          href="https://docs.google.com/forms/d/e/1FAIpQLSeBtZ6-uUoX_4Zm2wWJy7X3HcsY1zkdBr6_lx0kJSsMM5G3SA/viewform"
+          >Apply</a
         >
       </button>
     </div>
