--- a/apply.html
+++ b/apply.html
@@ -36,7 +36,7 @@
     <h1 id="demo">Staff Apply</h1>
     <p>Website where you can apply for Radar staff!</p>
     <p>Requirements:</p>
-    <p>Something goes here lol</p>
+    <br>Something goes here lol</br>
     <img src="./img/staff.png" class="center" />
     <div id="wrapper">
       <button class="glow-on-hover">
