--- a/apply.html
+++ b/apply.html
@@ -36,7 +36,8 @@
     <h1 id="demo">Staff Apply</h1>
     <p>Website where you can apply for Radar staff!</p>
     <p>Requirements:</p>
-    <dl>Something goes here lol</dl>
+    <dd>Something goes here lol</dd>
+    <dr>Hi</dr>
     <img src="./img/staff.png" class="center" />
     <div id="wrapper">
       <button class="glow-on-hover">
