--- a/apply.html
+++ b/apply.html
@@ -36,8 +36,12 @@
     <h1 id="demo">Staff Apply</h1>
     <p>Website where you can apply for Radar staff!</p>
     <p>Requirements:</p>
-    <dd>Something goes here lol</dd>
-    <dr>Hi</dr>
+    <dl>
+    <dt>Coffee</dt>
+    <dd>Black hot drink</dd>
+    <dt>Milk</dt>
+    <dd>White cold drink</dd>
+    </dl>
     <img src="./img/staff.png" class="center" />
     <div id="wrapper">
       <button class="glow-on-hover">
