--- a/apply.html
+++ b/apply.html
@@ -35,13 +35,8 @@
   <body>
     <h1 id="demo">Staff Apply</h1>
     <p>Website where you can apply for Radar staff!</p>
-    <p>Requirements:</p>
-    <dl>
-    <dt>Coffee</dt>
-    <dd>Black hot drink</dd>
-    <dt>Milk</dt>
-    <dd>White cold drink</dd>
-    </dl>
+    <h5>Requirements:</h5>
+    <h6>Something</h6>
     <img src="./img/staff.png" class="center" />
     <div id="wrapper">
       <button class="glow-on-hover">
