Why, just why????

--- a/apply.html
+++ b/apply.html
@@ -35,7 +35,7 @@
   <body>
     <h1 id="demo">Staff Apply</h1>
     <p>Website where you can apply for Radar staff!</p>
-    <p>Requirements: [here](https://radar-bot.xyz/req</p>
+    <p>Requirements: [here](https://radar-bot.xyz/req)</p>
     <img src="./img/staff.png" class="center" />
     <div id="wrapper">
       <button class="glow-on-hover">
