--- a/need.html
+++ b/need.html
@@ -35,10 +35,10 @@
   <body>
     <h1 id="demo">Requirements</h1>
     <p>Staff Apply:</p>
-      <h5>1. Must be on server for 10 days</h5>
-      <h5>2. You cannot have 2+ warnings</h5>
-      <h5>3. Must using Radar in your server</h5>
-      <h5>4. Must be active atleast 2h per day</h5>
+      <p>1. Must be on server for 10 days</p>
+      <p>2. You cannot have 2+ warnings</p>
+      <p>3. Must using Radar in your server</p>
+      <p>4. Must be active atleast 2h per day</p>
       <p>UnBan Appeal (soon)</p>
     <div id="wrapper">
       <button class="glow-on-hover">
