--- a/need.html
+++ b/need.html
@@ -33,13 +33,13 @@
     />
   </head>
   <body>
-    <h1 id="demo">Requirements</h1>
-    <p>Staff Apply:</p>
-      <h5 id="demo">1. You cannot have 2+ warnings</h5>
-      <h5 id="demo">2. Must be on server for 10 days</h5>
-      <h5 id="demo">3. Must using Radar in your server</h5>
-      <h1 id="demo">4. Must be active atleast 2h per day</h5>
-      <p>UnBan Appeal (soon)</p>
+    <h1 id="demo">Staff Apply Req:</h1>
+      <p>1. You cannot have 2+ warnings</p>
+      <p>2. Must be on server for 10 days</p>
+      <p>3. Must using Radar in your server</p>
+      <p>4. Must be active atleast 2h per day</p>
+    <h1 id="demo">UnBan Appeal Req:</h1>
+      <p>Soon</p>
     <div id="wrapper">
       <button class="glow-on-hover">
           <a href="https://radar-bot.xyz/unban">UnBan</a>
