--- a/need.html
+++ b/need.html
@@ -38,7 +38,7 @@
       <p>2. Must be on server for 10 days</p>
       <p>3. Must using Radar in your server</p>
       <p>4. Must be active atleast 2h per day</p>
-    <h1 id="demo">UnBan Appeal Req:</h1>
+    <h1>UnBan Appeal Req:</h1>
       <p>Soon</p>
     <div id="wrapper">
       <button class="glow-on-hover">
