--- a/sr.html
+++ b/sr.html
@@ -40,7 +40,7 @@
       <p>4. Must be active atleast 2h per day</p>
     <div id="wrapper">
       <button class="glow-on-hover">
-          <a href="https://radar-bot.xyz/unban">UnBan</a>
+          <a onclick="goBack()">Go Back</a>
       </button>
       <button class="glow-on-hover">
         <a
@@ -49,5 +49,10 @@
         >
       </button>
     </div>
+    <script>
+
+function goBack() {
+  window.history.back();
+}
   </body>
 </html>
