--- a/application.html
+++ b/application.html
@@ -33,18 +33,17 @@
     />
   </head>
   <body>
-    <h1 id="demo">Staff Apply</h1>
-    <p>Website where you can apply for Radar staff!</p>
-    <p>Requirements: <a href="https://radar-bot.xyz/sr">click here</a></p>
+    <h1 id="demo">Applications</h1>
+    <p>Website for Radar applications, staff or unban!</p>
     <img src="./img/staff.png" class="center" />
     <div id="wrapper">
       <button class="glow-on-hover">
-          <a href="https://discord.com/invite/SHpVQNmgHt">Server</a>                                
+          <a href="https://radar-bot.xyz">UnBan</a>                                
       </button>
       <button class="glow-on-hover">
         <a
           href="https://docs.google.com/forms/d/e/1FAIpQLSeBtZ6-uUoX_4Zm2wWJy7X3HcsY1zkdBr6_lx0kJSsMM5G3SA/viewform"
-          >Apply</a
+          >Staff</a
         >
       </button>
     </div>
