--- a/check.html
+++ b/check.html
@@ -2,7 +2,8 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Impossible Checkbox v2 🐻</title>
+  <title>Radar</title>
+  <link rel="icon" type="image/png" href="./img/logi.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link rel="stylesheet" href="./css/check.css">
 
