--- a/check.html
+++ b/check.html
@@ -5,8 +5,20 @@
   <title>Radar</title>
   <link rel="icon" type="image/png" href="./img/logi.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel="stylesheet" href="./css/check.css">
-
+  <link rel="stylesheet" href="./css/check.css">
+  <!-- METADATA -->
+    <meta name="theme-color" content="#03d7fc" />
+    <meta property="og:url" content="http://radar-bot.xyz" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Radar Bot" />
+    <meta
+      property="og:description"
+      content="Radar is a multifunctional Discord bot with many useful features!"
+    />
+    <meta
+      property="og:image"
+      content="https://radar-bot.xyz/Radar/img/logi.png"
+    />
 </head>
 <body>
 <!-- partial:index.partial.html -->
