--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
   <ul class="list-inline">
     <!-- <li class="list-inline-item"><a class="prlink" href="/privacy">Privacy</a></li> -->
     <!-- <li class="list-inline-item"><a class="prlink" href="/terms">Terms</a></li> -->
-    <li class="list-inline-item"><a class="prlink" href="https://discord.com/invite/SHpVQNmgHt">Support</a></li>
+    <li class="list-inline-item"><a class="prlink" href="https://discord.com/invite/SHpVQNmgHt">Support Server</a></li>
     <li class="list-inline-item"><a class="prlink" href="https://status.radar-bot.xyz">Status</a></li>
   </ul>
   
