--- a/index.html
+++ b/index.html
@@ -184,8 +184,7 @@
     <div class="col-lg-12 featuresec text-center">
       <div class="featurecon">
         <h3>And much more...</h3>
-        <a class="btn btn-success btn-lg" href="https://discord.com/invite/SHpVQNmgHt" style="margin-bottom:15px;" role="button">Invite Me<i
-            class="fa fa-fw fa-chevron-circle-right" aria-hidden="true"></i></a>
+        <a class="btn btn-success btn-lg" href="https://discord.com/oauth2/authorize?client_id=787438051479388170&permissions=8&scope=bot%20applications.commands' style="margin-bottom:15px;" role="button">Invite Me</a>
       </div>
     </div>
   </div>
@@ -223,10 +222,10 @@
   .hugething,
   .navbar {
     background: linear-gradient(90deg, #4287f5, #303030, #303030, #0366fc);
-    background-size: 600% 600%;
-    -webkit-animation: jumboani 10s ease infinite;
-    -moz-animation: jumboani 10s ease infinite;
-    animation: jumboani 10s ease infinite;
+    background-size: 500% 500%;
+    -webkit-animation: jumboani 7s ease infinite;
+    -moz-animation: jumboani 7s ease infinite;
+    animation: jumboani 7s ease infinite;
   }
 
   .dumbfuckingimage {
