--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <div class="col-lg-6 featuresec text-right">
       <div class="featurecon">
         <h3>Economy</h3>
-        <p>Radar also have customisable economy with own shops, hurry up and buy role!</p>
+        <p>Radar also have customisable economy with own shops, Go buy something!</p>
       </div>
     </div>
     <div class="col-lg-6 featuresec">
