--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
   <link rel="stylesheet" href="./css/emojis.css" />
   <script src="./js/emojis.js"></script>
 
-  <title>
-     Radar
-  </title>
+  <title>Radar</title>
 
   <!-- Choices includes -->
   <link rel="stylesheet" href="./css/choices.css" />
