--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js'></script>
   <script src='https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js'></script>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="theme-color" content="#03d7fc" />
+    <meta property="og:url" content="http://radar-bot.xyz" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Radar Bot" />
+    <meta
+      property="og:description"
+      content="Radar is a multifunctional Discord bot with many useful features!"
+    />
+    <meta
+      property="og:image"
+      content="https://radar-bot.github.io/Radar/img/logi.png"
+    />
+  
   <link rel="shortcut icon" href="https://cdn.discordapp.com/avatars/787438051479388170/a0327f5b21e992b9bbe833ce68e44d17.png?size=128" />
 
   <script src="./js/twemoji.js"></script>
