--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
     <div class="col-lg-12 featuresec text-center">
       <div class="featurecon">
         <h3>And much more...</h3>
+        <p>Ready to try out Radar? Let's go, click green button below!</p>
         <a class="btn btn-success btn-lg" href="https://discord.com/oauth2/authorize?client_id=787438051479388170&permissions=8&scope=bot%20applications.commands' style="margin-bottom:15px;" role="button">Invite Me</a>
       </div>
     </div>
