--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <head>
-  <script async src="https://arc.io/widget.min.js#aTts5ywz"></script>
+  <script async src="https://arc.io/widget.min.js#UuUqrZw2"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css'>
   <link rel="stylesheet" href="./css/darklyo.css">
