--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
   
     <div class="collapse navbar-collapse" id="navbar01">
       <ul class="navbar-nav mr-auto">
+        <li class="nav-item"><a class="nav-link" href="/commands">Commands</a></li>
         <li class="nav-item"><a class="nav-link" href="https://discord.com/oauth2/authorize?client_id=787438051479388170&permissions=8&scope=bot%20applications.commands">Add to Server</a></li>
         <li class="nav-item"><a class="nav-link" href="https://status.radar-bot.xyz">Bot Status</a></li>
         <li class="nav-item"><a class="nav-link" href="https://discord.com/invite/SHpVQNmgHt">Support</a></li>
@@ -110,7 +111,7 @@
     <p>Radar was made to be usable to everyone, and completely free!
       <br />Radar's commands are fun so you'll never
       have a boring moment on discord with your friends!</p>
-    <a class="btn btn-success" href="https://discord.com/oauth2/authorize?client_id=787438051479388170&permissions=8&scope=bot%20applications.commands" style="margin-bottom:15px;">Invite Me</a>
+    <a class="btn btn-secondary" href="https://discord.com/oauth2/authorize?client_id=787438051479388170&permissions=8&scope=bot%20applications.commands" style="margin-bottom:15px;">Invite Me</a>
     <a class="btn btn-secondary" href="https://status.radar-bot.xyz" style="margin-bottom:15px;">Status</a>
     <a class="btn btn-secondary" href="https://discord.com/invite/SHpVQNmgHt" style="margin-bottom:15px;">Support Server</a>
   </div>
@@ -195,7 +196,7 @@
       <div class="featurecon">
         <h3>And much more...</h3>
         <p>Ready to try out Radar? Let's go, click green button below!</p>
-        <a class="btn btn-success btn-lg" href="https://discord.com/oauth2/authorize?client_id=787438051479388170&scope=bot&permissions=8%20applications.commands" style="margin-bottom:15px;" role="button">Invite Me</a>
+        <a class="btn btn-secondary btn-lg" href="https://discord.com/oauth2/authorize?client_id=787438051479388170&scope=bot&permissions=8%20applications.commands" style="margin-bottom:15px;" role="button">Invite Me</a>
       </div>
     </div>
   </div>
