Oko mene cubex svuda cubex

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     <div class="col-lg-12 featuresec text-center">
       <div class="featurecon">
         <h3>And much more...</h3>
-        <p>Ready to try out Radar? Let's go, click green button below!</p>
+        <p>Ready to try out Radar? Let's go, click gray button below!</p>
         <a class="btn btn-secondary btn-lg" href="https://discord.com/oauth2/authorize?client_id=787438051479388170&scope=bot&permissions=8%20applications.commands" style="margin-bottom:15px;" role="button">Invite Me</a>
       </div>
     </div>
