--- a/index.html
+++ b/index.html
@@ -67,6 +67,17 @@
   <meta name="og:site_name" content="">
   <meta content="Radar is best multifunctional discord bot with many useful features!" property="og:description">
   <!-- END OF EMBEDS -->
+  
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-194785342-1">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  
+  gtag('config', 'UA-194785342-1');
+</script>
 </head>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="margin-bottom: 0;">
   <div class="container">
