--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       content="https://radar-bot.github.io/Radar/img/logi.png"
     />
   
-  <link rel="shortcut icon" href="https://cdn.discordapp.com/avatars/787438051479388170/a0327f5b21e992b9bbe833ce68e44d17.png?size=128" />
+  <link rel="shortcut icon" href="https://cdn.discordapp.com/attachments/799260287517327421/841640580672389130/9580bccb141a6538197a525bc971777b.png" />
 
   <script src="./js/twemoji.js"></script>
   <link rel="stylesheet" href="./css/emojis.css" />
@@ -81,7 +81,7 @@
 </head>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="margin-bottom: 0;">
   <div class="container">
-  <a class="navbar-brand" href="/"><img src="https://cdn.discordapp.com/avatars/787438051479388170/a0327f5b21e992b9bbe833ce68e44d17.png?size=128" width="30" height="30" class="d-inline-block align-top rounded-circle" alt=""> Radar</a>
+  <a class="navbar-brand" href="/"><img src="https://cdn.discordapp.com/attachments/799260287517327421/841640580672389130/9580bccb141a6538197a525bc971777b.png" width="30" height="30" class="d-inline-block align-top rounded-circle" alt=""> Radar</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar01" aria-controls="navbar01" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -108,7 +108,7 @@
 </style>
 <div class="bg-dark hugething text-center" style="box-shadow:0 5px 10px #1b1b1b;">
   <br />
-  <img src="https://cdn.discordapp.com/avatars/787438051479388170/a0327f5b21e992b9bbe833ce68e44d17.png?size=128" class="bot-img" /><br />
+  <img src="https://cdn.discordapp.com/attachments/799260287517327421/841640580672389130/9580bccb141a6538197a525bc971777b.png" class="bot-img" /><br />
   <h1 id="fat" class="mb-0">Radar</h1>
   <span>The best multifunctional bot</span>
   <br /><br /><br /><br />
