--- a/commands.html
+++ b/commands.html
@@ -12,7 +12,7 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js'></script>
   <script src='https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js'></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="https://cdn.discordapp.com/avatars/787438051479388170/a0327f5b21e992b9bbe833ce68e44d17.png?size=128"
+  <link rel="shortcut icon" href="https://cdn.discordapp.com/attachments/799260287517327421/841640580672389130/9580bccb141a6538197a525bc971777b.png"
   />
 
   <script src="./js/twemoji.js"></script>
@@ -56,7 +56,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="margin-bottom: 0;">
   <div class="container">
     <a class="navbar-brand" href="/">
-      <img src="https://cdn.discordapp.com/avatars/787438051479388170/a0327f5b21e992b9bbe833ce68e44d17.png?size=128"
+      <img src="https://cdn.discordapp.com/attachments/799260287517327421/841640580672389130/9580bccb141a6538197a525bc971777b.png"
       width="30" height="30" class="d-inline-block align-top rounded-circle" alt=""> Radar</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar01"
     aria-controls="navbar01" aria-expanded="false" aria-label="Toggle navigation">
