--- a/index.html
+++ b/index.html
@@ -203,6 +203,20 @@
     </div>
   <hr style="opacity:0;">
   <div class="row">
+    <div class="col-lg-6 featuresec text-right">
+      <div class="featurecon">
+        <img src="https://cdn.discordapp.com/attachments/799260287517327421/841789103057534996/20210511_232826.jpg" />
+      </div>
+    </div>
+    <div class="col-lg-6 featuresec">
+      <div class="featurecon">
+        <h3>Welcome & Leave</h3>
+        <p>With Radar you can warm welcome your new users and track how leaft your server!</p>
+      </div>
+    </div>
+    </div>
+  <hr style="opacity:0;">
+  <div class="row">
     <div class="col-lg-12 featuresec text-center">
       <div class="featurecon">
         <h3>And much more...</h3>
