--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
     <div class="col-lg-6 featuresec">
       <div class="featurecon">
         <h3>Welcome & Leave</h3>
-        <p>With Radar you can warm welcome your new users and track how leaft your server!</p>
+        <p>With Radar you can warm welcome your new users and track who left your server!</p>
       </div>
     </div>
     </div>
