--- a/partners.html
+++ b/partners.html
@@ -179,7 +179,7 @@
     <div class="col-lg-6 featuresec text-right">
       <div class="featurecon">
         <h3>Free Spot</h3>
-        <p>Wana be partner? Join Discord server and contact The Digital#3999</p>
+        <p>Wana be partner? Join Discord server and contact The Digital#3999!</p>
       </div>
       </div>
     <div class="col-lg-6 featuresec">
