--- a/partners.html
+++ b/partners.html
@@ -123,12 +123,13 @@
     <div class="col-lg-6 featuresec text-right">
       <div class="featurecon">
         <h3>Comfy Blobs</h3>
-        <p>This is an official server of DJ Blob & Doggo. This is a server for everyone especially blob lovers. <a href="https://discord.gg/RWSEj6JrjJ">Join Here</a></p>
+        <p>This is an official server of DJ Blob & Doggo. 
+          This is a server for everyone especially blob lovers. <a href="https://discord.gg/RWSEj6JrjJ">Join Here.</a></p>
       </div>
       </div>
     <div class="col-lg-6 featuresec">
       <div class="featurecon">
-        <img src="https://cdn.discordapp.com/avatars/790459083441963030/2abe5d6ffb42fdf1114d3e87fa6d3543.webp?size=128" />
+        <img src="https://cdn.discordapp.com/avatars/790459083441963030/2abe5d6ffb42fdf1114d3e87fa6d3543.webp?size=256" />
       </div>
     </div>
     </div>
