--- a/partners.html
+++ b/partners.html
@@ -129,7 +129,7 @@
       </div>
     <div class="col-lg-6 featuresec">
       <div class="featurecon">
-        <img src="https://cdn.discordapp.com/avatars/790459083441963030/2abe5d6ffb42fdf1114d3e87fa6d3543.webp?size=256" />
+        <img src="https://cdn.discordapp.com/attachments/799260287517327421/842374234566557766/blobs.png" />
       </div>
     </div>
     </div>
