--- a/partners.html
+++ b/partners.html
@@ -129,7 +129,7 @@
       </div>
     <div class="col-lg-6 featuresec">
       <div class="featurecon">
-        <img src="https://cdn.discordapp.com/attachments/799260287517327421/842374234566557766/blobs.png" />
+        <img src="https://cdn.discordapp.com/attachments/842375142110003202/842375187944701982/blobs.png" />
       </div>
     </div>
     </div>
@@ -137,7 +137,7 @@
   <div class="row">
     <div class="col-lg-6 featuresec text-right">
       <div class="featurecon">
-        <img class="dumbfuckingimage" src="https://radar-bot.xyz/img/link.png" />
+        <img class="dumbfuckingimage" src="https://cdn.discordapp.com/attachments/842375142110003202/842375170126512168/link.png" />
       </div>
     </div>
     <div class="col-lg-6 featuresec">
@@ -157,7 +157,7 @@
     </div>
     <div class="col-lg-6 featuresec">
       <div class="featurecon">
-        <img src="https://radar-bot.xyz/img/link.png" />
+        <img src="https://cdn.discordapp.com/attachments/842375142110003202/842375170126512168/link.png" />
       </div>
     </div>
   </div>
@@ -165,7 +165,7 @@
   <div class="row">
     <div class="col-lg-6 featuresec text-right">
       <div class="featurecon">
-        <img src="https://radar-bot.xyz/img/link.png" />
+        <img src="https://cdn.discordapp.com/attachments/842375142110003202/842375170126512168/link.png" />
       </div>
     </div>
     <div class="col-lg-6 featuresec">
@@ -185,7 +185,7 @@
       </div>
     <div class="col-lg-6 featuresec">
       <div class="featurecon">
-        <img src="https://radar-bot.xyz/img/link.png" />
+        <img src="https://cdn.discordapp.com/attachments/842375142110003202/842375170126512168/link.png" />
       </div>
     </div>
     </div>
