--- a/partners.html
+++ b/partners.html
@@ -137,7 +137,7 @@
   <div class="row">
     <div class="col-lg-6 featuresec text-right">
       <div class="featurecon">
-        <img class="dumbfuckingimage" src="https://cdn.discordapp.com/attachments/842375142110003202/842375170126512168/link.png" />
+        <img src="https://cdn.discordapp.com/attachments/842375142110003202/842375170126512168/link.png" />
       </div>
     </div>
     <div class="col-lg-6 featuresec">
