--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
       have a boring moment on discord with your friends!</p>
     <a class="btn btn-secondary" href="https://discord.com/oauth2/authorize?client_id=787438051479388170&permissions=8&scope=bot%20applications.commands" style="margin-bottom:15px;">Invite Me</a>
     <a class="btn btn-secondary" href="https://status.radar-bot.xyz" style="margin-bottom:15px;">Status</a>
+    <a class="btn btn-secondary" href="/partners" style="margin-bottom:15px;">Partners</a>
     <a class="btn btn-secondary" href="https://discord.com/invite/SHpVQNmgHt" style="margin-bottom:15px;">Support Server</a>
   </div>
   <br />
