--- a/partners.html
+++ b/partners.html
@@ -137,13 +137,13 @@
   <div class="row">
     <div class="col-lg-6 featuresec text-right">
       <div class="featurecon">
-        <img src="https://cdn.discordapp.com/attachments/842375142110003202/842375170126512168/link.png" />
+        <img src="https://cdn.discordapp.com/attachments/842375142110003202/842390098313085008/preuzmi_2.png" />
       </div>
     </div>
     <div class="col-lg-6 featuresec">
       <div class="featurecon">
-        <h3>Free Spot</h3>
-        <p>Wana be partner? Join Discord server and contact The Digital#3999!</p>
+        <h3>Labor Bot</h3>
+        <p>Labor-Bot is there to make your life as easy and simple as possible and we offer many kind of commands. <a href="https://laborbot.ga/">Learn More.</a></p>
       </div>
     </div>
   </div>
