--- a/affiliate.html
+++ b/affiliate.html
@@ -36,6 +36,7 @@
   <script src="./js/choices.js"></script>
   <!-- End Choices includes -->
 
+
     
   <style>
     optgroup {
@@ -123,7 +124,8 @@
     <div class="col-lg-6 featuresec text-right">
       <div class="featurecon">
         <h3>NordVPN</h3>
-        <p>NordVPN is the best VPN if you're looking for a peace of mind when on public Wi-Fi. Securely access personal information or work files, encrypt your internet connection, and keep your browsing history private. We will be also creating giveaways of NordVPN so make sure to check it out! <a href="https://go.nordvpn.net/aff_c?offer_id=615&aff_id=56251&url_id=14831">Visit Here.</a></p>
+        <p>NordVPN is the best VPN if you're looking for a peace of mind when on public Wi-Fi. Securely access personal information or work files, encrypt your internet connection, and keep your browsing history private. We will be also creating giveaways of NordVPN so make sure to check it out! </p>
+        <p><a href="https://go.nordvpn.net/aff_c?offer_id=615&aff_id=56251&url_id=14831">Visit Here</a>,  <a href="https://discord.gg/XpTVCKPZ3n">Must Join Here.</a></p></p>
       </div>
       </div>
      <div class="col-lg-6 featuresec">
