--- a/affiliate.html
+++ b/affiliate.html
@@ -124,8 +124,11 @@
     <div class="col-lg-6 featuresec text-right">
       <div class="featurecon">
         <h3>NordVPN</h3>
-        <p>NordVPN is the best VPN if you're looking for a peace of mind when on public Wi-Fi. Securely access personal information or work files, encrypt your internet connection, and keep your browsing history private. We will be also creating giveaways of NordVPN so make sure to check it out! </p>
-        <p><a href="https://go.nordvpn.net/aff_c?offer_id=615&aff_id=56251&url_id=14831">Visit Here</a>,  <a href="https://discord.gg/XpTVCKPZ3n">Must Join Here.</a></p></p>
+        <p>1. Access all your favorite TV shows and movies securely with NordVPN, wherever you are!</p>
+        <p>2. Get the fastest VPN and securely stream all your favorite content.</p>
+        <p>Protect your online privacy with NordVPN and access a more secure Internet.</p>
+        <p>Protect your online privacy and improve your online security with NordVPN!</p>
+        <p><a href="https://go.nordvpn.net/aff_c?offer_id=615&aff_id=56251&url_id=14831">Visit Here</a>,  <a href="https://discord.gg/XpTVCKPZ3n">Must Join Server.</a></p></p>
       </div>
       </div>
      <div class="col-lg-6 featuresec">
