--- a/affiliate.html
+++ b/affiliate.html
@@ -124,10 +124,9 @@
     <div class="col-lg-6 featuresec text-right">
       <div class="featurecon">
         <h3>NordVPN</h3>
-        <p>1. Access all your favorite TV shows and movies securely with NordVPN, wherever you are!</p>
-        <p>2. Get the fastest VPN and securely stream all your favorite content.</p>
-        <p>Protect your online privacy with NordVPN and access a more secure Internet.</p>
-        <p>Protect your online privacy and improve your online security with NordVPN!</p>
+        <p>Access all your favorite TV shows and movies securely with NordVPN!</p>
+        <p>Get the fastest VPN and securely stream all your favorite content.</p>
+        <p>Protect your privacy with NordVPN and access a more secure Internet.</p>
         <p><a href="https://go.nordvpn.net/aff_c?offer_id=615&aff_id=56251&url_id=14831">Visit Here</a>,  <a href="https://discord.gg/XpTVCKPZ3n">Must Join Server.</a></p></p>
       </div>
       </div>
