--- a/affiliate.html
+++ b/affiliate.html
@@ -127,7 +127,7 @@
         <p>Access all your favorite TV shows and movies securely with NordVPN.</p>
         <p>Get the fastest VPN and securely stream all your favorite content.</p>
         <p>Protect your privacy with NordVPN and access a more secure Internet.</p>
-        <p><a href="https://go.nordvpn.net/aff_c?offer_id=615&aff_id=56251&url_id=14831">Visit Here</a>,  <a href="https://discord.gg/XpTVCKPZ3n">Must Join Server.</a>, <a href="<a href="https://discord.gg/XpTVCKPZ3n">Must Join Server.</a href="https://youtube.com/c/Nordvpn">YouTube</a>.</p></p>
+        <p><a href="https://go.nordvpn.net/aff_c?offer_id=615&aff_id=56251&url_id=14831">Visit Here</a>,  <a href="https://discord.gg/XpTVCKPZ3n">Must Join Server.</a>. </a href="https://youtube.com/c/Nordvpn">YouTube</a>.</p>
       </div>
       </div>
      <div class="col-lg-6 featuresec">
