--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
     <a class="btn btn-secondary" href="https://status.radar-bot.xyz" style="margin-bottom:15px;">Status</a>
     <a class="btn btn-secondary" href="/partners" style="margin-bottom:15px;">Partners</a>
     <a class="btn btn-secondary" href="/affiliate" style="margin-bottom:15px;">Affiliates</a>
-    <a class="btn btn-secondary" href="https://discord.com/invite/SHpVQNmgHt" style="margin-bottom:15px;">Support Server</a>
+    <a class="btn btn-secondary" href="https://github.com/Radar-Bot" style="margin-bottom:15px;">GitHub</a>
+    <a class="btn btn-secondary" href="https://discord.com/invite/SHpVQNmgHt" style="margin-bottom:15px;">Server</a>
   </div>
   <br />
   <br /><br /><br /><br /><br /><br />
