--- a/partners.html
+++ b/partners.html
@@ -189,6 +189,62 @@
       </div>
     </div>
     </div>
+  <hr style="opacity:0;">
+  <div class="row">
+    <div class="col-lg-6 featuresec text-right">
+      <div class="featurecon">
+        <img src="https://cdn.discordapp.com/attachments/842375142110003202/842375170126512168/link.png" />
+      </div>
+    </div>
+    <div class="col-lg-6 featuresec">
+      <div class="featurecon">
+        <h3>Free Spot</h3>
+        <p>Wana be partner? Join Discord server and contact The Digital#3999!</p>
+      </div>
+    </div>
+  </div>
+  <hr style="opacity:0;">
+  <div class="row">
+    <div class="col-lg-6 featuresec text-right">
+      <div class="featurecon">
+        <h3>Free Spot</h3>
+        <p>Wana be partner? Join Discord server and contact The Digital#3999!</p>
+      </div>
+    </div>
+    <div class="col-lg-6 featuresec">
+      <div class="featurecon">
+        <img src="https://cdn.discordapp.com/attachments/842375142110003202/842375170126512168/link.png" />
+      </div>
+    </div>
+  </div>
+  <hr style="opacity:0;">
+  <div class="row">
+    <div class="col-lg-6 featuresec text-right">
+      <div class="featurecon">
+        <img src="https://cdn.discordapp.com/attachments/842375142110003202/842375170126512168/link.png" />
+      </div>
+    </div>
+    <div class="col-lg-6 featuresec">
+      <div class="featurecon">
+        <h3>Free Spot</h3>
+        <p>Wana be partner? Join Discord server and contact The Digital#3999!</p>
+      </div>
+    </div>
+    </div>
+  <hr style="opacity:0;">
+  <div class="row">
+    <div class="col-lg-6 featuresec text-right">
+      <div class="featurecon">
+        <h3>Free Spot</h3>
+        <p>Wana be partner? Join Discord server and contact The Digital#3999!</p>
+      </div>
+      </div>
+    <div class="col-lg-6 featuresec">
+      <div class="featurecon">
+        <img src="https://cdn.discordapp.com/attachments/842375142110003202/842375170126512168/link.png" />
+      </div>
+    </div>
+    </div>
   <footer class="my-5 pt-5 text-muted text-center text-small" style="cursor:default;">
   <div class="container"><hr></div>
   <p class="mb-1" style="color:#DDD;">Copyright &copy; Radar Team 2021</p>
