--- a/meme.html
+++ b/meme.html
@@ -127,14 +127,14 @@
     <div class="allahuakbar">
       <div class="mashallah">
         <div class="inshallah pepe">
-          <img src="https://cdn.discordapp.com/avatars/270904126974590976/d60c6bd5971f06776ba96497117f7f58.png?size=1024">
+          <img src="https://cdn.discordapp.com/attachments/799260287517327421/845222314609082368/circle-cropped_2.png">
             <div class="hidden">don't listen me, i'm shit</div>
         </div>
         <div class="alhamdulillah">
           +
         </div>
         <div class="inshallah allah">
-          <img src="https://i.pinimg.com/originals/be/92/f5/be92f51ef908d53c0c74d5e06a59365e.gif">
+          <img src="https://cdn.discordapp.com/attachments/799260287517327421/845223961498615828/circle-cropped_4.png">
             <div class="hidden">wtf is this?</div>
         </div>
         <div class="alhamdulillah">
