--- a/meme.html
+++ b/meme.html
@@ -135,14 +135,14 @@
         </div>
         <div class="inshallah allah">
           <img src="https://cdn.discordapp.com/attachments/799260287517327421/845223961498615828/circle-cropped_4.png">
-            <div class="hidden">wtf is this?</div>
+
         </div>
         <div class="alhamdulillah">
           =
         </div>
         <div class="inshallah monoxpepe">
           <img src="https://cdn.discordapp.com/attachments/799260287517327421/845222991709339648/circle-cropped_3.png">
-            <div class="hidden">finally</div>
+            <div class
         </div>
       </div>
     </div>
