--- a/partners.html
+++ b/partners.html
@@ -152,7 +152,8 @@
     <div class="col-lg-6 featuresec text-right">
       <div class="featurecon">
         <h3>Mythic Universe</h3>
-        <p>Hello everyone, are you looking for a site to put your bot on? Or are you trying to make an epic server with cool custom bots? Then you need <a href="https://discord.gg/cScDu3qqYN">Join Here</a>.</p>
+        <p>Are you looking for a site to put your bot on? Or are you trying to make an epic server with cool custom bots?</p>
+        <p.Then you need <a href="https://discord.gg/cScDu3qqYN">Join Here</a>.</p>
       </div>
     </div>
     <div class="col-lg-6 featuresec">
